# cv-ros2-px4

./: .gitmodules  README.md  red_color_detector.py  run_tracking_nodes.bat  start.md  test_fix.sh  test_tracking_system.sh
ros_ws/cv_ros/: requirements.txt
ros_ws/src/cv_ros/: CMakeLists.txt  __init__.py  build_px4_deps.md  color_tracking_offboard.py  fix_arming_denied.md  fix_build.md  fix_executable_not_found.md  fix_git_push_error.md  fix_missing_catkin_pkg.md  fix_missing_init_py.md  fix_px4_msgs.md  fix_px4_msgs_recognition.md  fix_script_location.md  fix_ssh_hostname_issue.md  fix_trajectory_setpoint_output.md  fix_unicode_error.md  fix_unicode_launch_error.md  fix_unstaged_changes_error.md  flight_test_guide.md  gps_position_controller.py  headless_mode_usage.md  package.xml  raspberry_pi_instructions.md  refactor_summary.md  run_with_python_headless.md  setup.py  sync_repo_over_ssh.md  test_guide.md  troubleshoot_package_not_found.md  troubleshoot_px4_msgs.md  troubleshoot_trajectory_setpoint.md  troubleshoot_virtual_env.md  usb_camera_node.py  verify_control_node.md  verify_red_detector.md  view_node_logs.md
ros_ws/src/cv_ros/cv_ros/: __init__.py  color_tracking_offboard.py  red_color_detector_ros2.py
ros_ws/src/cv_ros/deprecated/: red_detector_downward.py
ros_ws/src/cv_ros/launch/: red_color_detector.launch.py
